# fabdata-llm-retrieval

./: .gitignore  README.md  data_config_template.yml  pyproject.toml  redis_server_config_template.yml  requirements.txt  summarized_conversations.json  test_query.py
demo/: demo.py  newdemo.py
sandbox/: demo_extraction.py  demo_plugin.py  demo_upsert.py
sandbox/contexts/: context_interpreter.txt  context_searcher.txt
src/fdllmret/: helpers.py  plugin.py  tools.py
src/fdllmret/_scripts/: extract_text_pdfs.py  process_json.py
src/fdllmret/datastore/: datastore.py  factory.py
src/fdllmret/datastore/providers/: redis_datastore.py
src/fdllmret/helpers/: analysis.py  encoding.py  extraction.py  query.py  upsert.py
src/fdllmret/models/: api.py  models.py
src/fdllmret/services/: chunks.py  file.py  openai.py
