[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
packages = [{include = "src"}]

[project]
name = "fabdata-llm-retrieval"
version = "0.1.0"
requires-python = ">=3.8, <=3.12"
dependencies = [
    "fabdata-llm @ git+https://github.com/AI-for-Education/fabdata-llm.git@v0.15.0",
    "python-dotenv == 1.*",
    "pydantic == 2.*",
    "tenacity == 8.2.*",
    "numpy",
    "redis == 4.5.*"
]

[project.scripts]
fdllmret-process-json = "fdllmret._scripts.process_json:main"